--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# MySQL Configuration
+# MySQL Configuration - changes by Selva
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
 spring.datasource.password=7Ygvbhu8*
