Spring Security Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-# MySQL Configuration - changes by Selva
-spring.datasource.url=jdbc:mysql://localhost:3306/employee
+# MySQL Configuration - created by Selva
+spring.datasource.url=jdbc:mysql://localhost:3306/hrms
 spring.datasource.username=root
 spring.datasource.password=7Ygvbhu8*
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+jwt.secret='h:)[k6X-M4QE(~NK#Nf{%YPN/8G#^F3K}`>hJV07]l?{9Jju$y#K>2-n8b!vrz&'
