User Registration & User Login API's Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-jwt.secret='h:)[k6X-M4QE(~NK#Nf{%YPN/8G#^F3K}`>hJV07]l?{9Jju$y#K>2-n8b!vrz&'
+jwt.secret=h:)[k6X-M4QE(~NK#Nf{%YPN/8G#^F3K}`>hJV07]l?{9Jju$y#K>2-n8b!vrz&
