--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=7Ygvbhu8*
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.mvc.throw-exception-if-no-handler-found=true
 
 jwt.secret=h:)[k6X-M4QE(~NK#Nf{%YPN/8G#^F3K}`>hJV07]l?{9Jju$y#K>2-n8b!vrz&
